Fixed the scrollbar issue in sketchbook tree.

--- a/arduino-ide-extension/src/browser/style/sketchbook.css
+++ b/arduino-ide-extension/src/browser/style/sketchbook.css
@@ -16,5 +16,5 @@
 }
 
 .sketchbook-trees-container {
-    height: 100%;
+    height: 99%;
 }
